[package]
name = "tempo-rs"
description = "Rust library & minimal client to connect and interact with RTE's 'Tempo Like Supply Contract' API"
categories = ["api-bindings", "asynchronous", "command-line-utilities"]
keyword = ["tempo", "rte", "edf", "api", "cli", "france", "electricity"]
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Nic0w/tempo-rs"
homepage = "https://github.com/Nic0w/tempo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4.22"
oauth2 = "4.4.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
